[tool.poetry]
name = "houghtool"
version = "0.1.0"
description = "Utilities for working with Hough lines from OpenCV."
authors = ["Alexander Reynolds <ar@reynoldsalexander.com>"]
homepage = "https://github.com/alkasm/houghtool"
repository = "https://github.com/alkasm/houghtool"
keywords = ["cvtools", "computer vision", "cv", "opencv", "hough"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
